adds support for creating topic